transcode: take codec earlier on so codec aliases are handled better, ref #7892